# minipkg

./: .copier-answers.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  duties.py  index.html  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
credits/: index.html
docs/.overrides/partials/: comments.html
docs/reference/: api.md
license/: index.html
reference/api/: index.html
scripts/: gen_credits.py
src/minipkg/: __init__.py  __main__.py
src/minipkg/_internal/: cli.py  debug.py
tests/: __init__.py  test_api.py  test_cli.py
