[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "minipkg"
description = "Minimal packaging example with uv and pyproject.toml"
authors = [{name = "J-M", email = "jean-michel.perraud@csiro.au"}]
license = "BSD-3-Clause-Clear"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://sf-wnsw.github.io/minipkg"
Documentation = "https://sf-wnsw.github.io/minipkg"
Changelog = "https://sf-wnsw.github.io/minipkg/changelog"
Repository = "https://github.com/sf-wnsw/minipkg"
Issues = "https://github.com/sf-wnsw/minipkg/issues"
Discussions = "https://github.com/sf-wnsw/minipkg/discussions"
Gitter = "https://gitter.im/sf-wnsw/minipkg"
Funding = "https://github.com/sponsors/jmp75"

[project.scripts]
minipkg = "minipkg:main"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
maintain = [
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
]
ci = [
    "duty>=1.6",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
]

[tool.uv]
default-groups = ["maintain", "ci"]
